<resources>
    <string name="app_name">iApplyApp</string>
    <string name="login_txt">Login</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="iapply_logo">iApply Logo</string>
    <string name="sign_up_txt">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_txt">Forgot Password</string>
    <string name="send">SEND</string>
    <string name="reset_password_txt">Reset Password</string>
    <string name="new_password_txt">New Password</string>
    <string name="re_type_password_txt">Re-type Password</string>
    <string name="reset">RESET</string>
    <string name="otp_verification_txt">OTP Verification</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_recieve_the_otp">Didn\'t recieve the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">VERIFY</string>
    <string name="dash">-</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name</string>
    <string name="search">Search</string>
    <string name="top_consultancies">Top Consultancies</string>
    <string name="more">More</string>
    <string name="company1_img">company1_img</string>
    <string name="consultancy_name">Consultancy Name</string>
    <string name="top_countries">Top Countries</string>
    <string name="australia">Australia</string>
    <string name="japan">Japan</string>
    <string name="canada">Canada</string>
</resources>