<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#F4E8FF"
    android:orientation="vertical">







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal"
        android:background="@drawable/background2">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp">
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="16sp"
                android:fontFamily="@font/outfit_regular"
                android:textColor="#ffffff"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="26sp"
                android:fontFamily="@font/outfit_semibold"
                android:textColor="#ffffff"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:src="@drawable/iapply_logo"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/iapply_logo" />
    </LinearLayout>
    </LinearLayout>










    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:background="#6C50A1">
        <EditText
            android:layout_width="match_parent"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:hint="@string/search"
            android:textColorHint="#BDB2C3"
            android:textSize="16sp"
            android:paddingHorizontal="16dp"
            android:fontFamily="@font/outfit_regular"
            android:background="@drawable/search_field_bg"/>
    </LinearLayout>












    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="20dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#ffffff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_consultancies"
            android:textSize="20sp"
            android:layout_marginHorizontal="25dp"
            android:fontFamily="@font/outfit_semibold"
            android:layout_gravity="center"
            android:textColor="#523A81"
            />
        <TextView
            android:id="@+id/more_consultancies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textSize="14sp"
            android:fontFamily="@font/outfit_regular"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="25dp"
            android:layout_gravity="center"
            android:textColor="#40D900"
            />
    </LinearLayout>









    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/rounded_rect_white_bg"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/company1"
                    android:contentDescription="@string/company1_img"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/consultancy_name"
                android:textSize="14sp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                android:textColor="#3A3A3A"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/rounded_rect_white_bg"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/company2"
                    android:contentDescription="@string/company1_img"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/consultancy_name"
                android:textSize="14sp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                android:textColor="#3A3A3A"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/rounded_rect_white_bg"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/company3"
                    android:contentDescription="@string/company1_img"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/consultancy_name"
                android:textSize="14sp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                android:textColor="#3A3A3A"
                />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="12dp"
        android:layout_height="10dp"
        android:orientation="horizontal"
        android:background="#EBDAFA">
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="20dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#ffffff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_countries"
            android:textSize="20sp"
            android:layout_marginHorizontal="25dp"
            android:fontFamily="@font/outfit_semibold"
            android:layout_gravity="center"
            android:textColor="#523A81"
            />
        <TextView
            android:id="@+id/more_countries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textSize="14sp"
            android:fontFamily="@font/outfit_regular"
            android:layout_marginStart="158dp"
            android:layout_marginEnd="25dp"
            android:layout_gravity="center"
            android:textColor="#40D900"
            />
    </LinearLayout>









    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/rounded_rect_white_bg"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/flag_australia"
                    android:contentDescription="@string/company1_img"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/australia"
                android:textSize="14sp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                android:textColor="#3A3A3A"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/rounded_rect_white_bg"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/flag_japan"
                    android:contentDescription="@string/company1_img"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/japan"
                android:textSize="14sp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                android:textColor="#3A3A3A"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/rounded_rect_white_bg"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/flag_canada"
                    android:contentDescription="@string/company1_img"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/canada"
                android:textSize="14sp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                android:textColor="#3A3A3A"
                />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="12dp"
        android:layout_height="10dp"
        android:orientation="horizontal"
        android:background="#EBDAFA">
    </LinearLayout>







</LinearLayout>